package masterRpc;

option cc_generic_services = true;

message AuctionBidProxyRequest
{
	required int64 auction_id = 1;
	required int64 bidder = 2;
	required int32 currency_type = 3;
	required int32 price = 4;
}

message AuctionBidProxyResponse
{
	enum ErrorCode
	{
		NO_ERROR = 0;
		DB_BUSY = 1;
		NO_AUCTION = 2;
		PRICE_ERR = 3;
		PARAM_ERR = 4;
	}

	required ErrorCode error = 1 [default = NO_ERROR];
	required int32 cur_bid_price = 2;
	required int64 cur_bidder = 3;
}

service AuctionBidProxyService
{
	rpc HandleAuctionBidProxy (AuctionBidProxyRequest) returns (AuctionBidProxyResponse);
}
